@@ -1,3 +1,7 @@
+2007-07-26  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	* base/smart_ptr.h: applied 'mutable'
+
 2007-07-22  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	A bit cleanup
